--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+.contatoCampo-label{
+  position: relative;
+}
+
 .contatoCampo-label:before {
   content:'';
   vertical-align: middle;
@@ -17,13 +21,32 @@
   border: 1px solid #7D7D7D;
   color: transparent;
   line-height: 1;
-  transition: .2s ease-in;
+  transition: background-color .2s ease-in color .2s ease-in; 
+  box-sizing: border-box;
+}
+
+.contatoCampo-checkbox:hover + .contatoCampo-label:before, .contatoCampo-checkbox:focus + .contatoCampo-label:before{
+  border: 2px solid #333;
 }
 
 .contatoCampo-checkbox:checked + .contatoCampo-label:before {
-  content: 'x';
+  content: '';
   color: #fff;
   background-image: radial-gradient(circle, #2DA4E7, #2F80ED);
+  border-color: #015fbe;
+}
+.contatoCampo-checkbox:checked + .contatoCampo-label:after{
+  content: '';
+  width: 10px;
+  height: 5px;
+  border-bottom: 2px solid rgb(255, 255, 255);
+  border-left: 2px solid rgb(255, 255, 255);
+  transform: rotate(-45deg);
+  display: block;
+  position: absolute;
+  z-index: 2;
+  left: -3px;
+  top: 5px;
 }
 
 .contatoCampo-checkbox {
@@ -80,7 +103,7 @@
   font-size: .9em;
   font-weight: bold;
   color: #FD1242;
-  display: inline-block;
+  display: none;
 }
 
 .contatoCampo .contatoCampo--validouFoi {
